--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section class="container">
   <div class="container__qr">
-    <img src="image-qr-code.png" alt="QR code">
+    <img src="image-qr-code.webp" alt="QR code">
   </div>
     <h1 class="container__title text--big">Improve your front-end skills by building projects</h1>
     <p class="container__content text--normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
